small fix of table styling and missing space in between categories link

--- a/src/sass/components/_wpblocks.scss
+++ b/src/sass/components/_wpblocks.scss
@@ -18,9 +18,12 @@
 }
 .wp-block-table {
 	border: 1px solid;
-	width: 100%;
-	border-collapse: collapse;
-	margin-bottom: 30px;
+  margin-bottom: 30px;
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
 
 	td {
 		border: 1px solid;
